# xm-study

./: CMakeLists.txt  READEME.md
doc/: random_display_name.py
doc/.ipynb_checkpoints/: 最优化算法-checkpoint.ipynb
doc/node/: 2016-10-02.md  2017-1-3.md  CMake.md  Delaunay Mesh Generation.ipynb  PDE-book.ipynb  flsah安装.ipynb  linux.md  matlab.md  matlab_study.md  python_exam.ipynb  python_study.md  python文档注释.m  study_web.md  sushu.md  二分法.ipynb  图形用户界面.md  程序笔记.md  解决问题集.ipynb
doc/passsge/线性代数(2015新版)/: 0引言 《线性代数》简史.PPT  1-1 全排列及逆序数.PPT  1-2 n阶行列式的定义.PPT  1-3 行列式的性质.PPT  1-4 行列式按一行（列）展开.PPT  1-5 克莱姆法则.PPT  1-6 本章概要与典型例题分析.PPT  2-3 逆矩阵.PPT  (+21 more)
doc/surface/: adaptive_surface.ipynb
include/: CMakeLists.txt
scft-xtudy/: scft-study.ipynb  scft.ipynb
scft-xtudy/.ipynb_checkpoints/: scft-checkpoint.ipynb  scft-study-checkpoint.ipynb
src/: CMakeLists.txt
test/: 20.cpp  CGAL_test.cpp  CMakeCache.txt  CMakeLists.txt  Fibonacci.cpp  Helloworld.cpp  Makefile  Max.c  NTdiedaifa.cpp  NTerfenfa.cpp  Sum.c  Test_class.cpp  Test_class_c1.cpp  area_test.cpp  assign.cpp  class.cpp  class_Tdate.cpp  class_student.cpp  cmake_install.cmake  convert.cpp  equation.cpp  equation1.cpp  erfenfa.cpp  gauss_legendre.c  gauss_legendre.h  gys.cpp  if_else.cpp  jc1.cpp  jiecheng.cpp  main.cpp  math1.cpp  max-jz.cpp  max.cpp  name.c  paixu.cpp  pi.cpp  qdxs.cpp  shuixhs.cpp  sm2.cpp  sph  (+19 more)
test/src/: Makefile  cmake_install.cmake
test/test/: Makefile
xm-study/matlab-m/: GUI.m  li1_3.m  li1_4.m  mesh1.m  stat.m  statest.m
xm-study/matlab-test/: Foo1.m  L2projector1D.m  LoadAssembler1D.m  MassAssembler1D.m  euler.m  geuler.m  test1.m  test2.m
xm-study/python-test/: 10.py  11.py  12.py  122.py  6.py  7.py  8.py  9.py  DT.py  Equation.py  Fibonacci.py  Hello1.py  NT.py  Person.py  PersonInit.py  PersonMethod.py  Pi.py  PointInit.py  SSum.py  SUshu.py  SubClass.py  break_T.py  chaos.py  continue_div3.py  continue_student.py  csv_reader1.py  demo.py  equation1.py  error1.py  f1.py  fabs.py  fff.py  for_sum1_100.py  fsolve.py  getValue.py  getpass1.py  grid2.py  hello.py  hello1.py  hello2.py  (+40 more)
(+32 files in other folders)
