if(HAVE_CGAL)
    add_executable(CGAL_test CGAL_test.cpp)
    target_link_libraries(CGAL_test  ${CGAL_LIBRARIES})
endif()

add_executable(main main.cpp)
add_executable(Helloworld Helloworld.cpp)
add_executable(max max.cpp)
add_executable(sum1 sum1.cpp) 
add_executable(sqr sqr.cpp) 
add_executable(paixu paixu.cpp) 
add_executable(jiecheng jiecheng.cpp)
add_executable(qdxs qdxs.cpp)
add_executable(equation equation.cpp)
add_executable(equation1 equation1.cpp)
add_executable(zhuanzhi zhuanzhi.cpp)
add_executable(max-jz max-jz.cpp)
add_executable(Fibonacci Fibonacci.cpp)
add_executable(NTdiedaifa NTdiedaifa.cpp)
add_executable(yuanta yuanta.cpp)
add_executable(shuixhs  shuixhs.cpp)
add_executable(gys gys.cpp)
add_executable(jc1 jc1.cpp)
add_executable(NTerfenfa NTerfenfa.cpp)
add_executable(erfenfa erfenfa.cpp)
add_executable(class class.cpp)
add_executable(convert convert.cpp)
add_executable(zhizhen zhizhen.cpp)
add_executable(math1 math1.cpp)
add_executable(sm2 sm2.cpp)
add_executable(zhengchu zhengchu.cpp)
add_executable(pi pi.cpp)
add_executable(tuan tuan.cpp)
add_executable(sushu sushu.cpp)
add_executable(Max Max.c)
add_executable(Sum Sum.c)
add_executable(name name.c)
add_executable(struct struct.cpp)
add_executable(if_else if_else.cpp)
add_executable(assign assign.cpp)
add_executable(spheretest spheretest.cpp)

